--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Week1_8_Jungle.sln"
+    "dotnet.defaultSolution": "Week1_8_Jungle_Impl_Kang.sln"
 }
